crates/rymx/tests/errors/ranges.rym
const full_inclusive = [1, 0, 2].[..=];
const from_inclusive = [1, 0, 2].[1..=];
